--- a/src/index.ejs
+++ b/src/index.ejs
@@ -6,8 +6,8 @@
       name="viewport"
       content="width=device-width, initial-scale=1, shrink-to-fit=no"
     />
-    <meta name="theme-color" content="#000000" />
-    <title>9 by 9</title>
+    <meta name="theme-color" content="#FFFFFF" />
+    <title>PotionCraft Plotter</title>
   </head>
 
   <body>
